@@ -144,6 +144,6 @@ your forms.
 
 .. autoclass:: QuerySelectField(default field args, query_factory=None, get_pk=None, label_attr='', allow_blank=False, blank_text=u'')
 
-.. autoclass:: QueryMultipleSelectField(default field args, query_factory=None, get_pk=None, label_attr='', allow_blank=False, blank_text=u'')
+.. autoclass:: QuerySelectMultipleField(default field args, query_factory=None, get_pk=None, label_attr='', allow_blank=False, blank_text=u'')
 
 .. autoclass:: ModelSelectField(default field args, model=None, get_pk=None, label_attr='', allow_blank=False, blank_text=u'')
